# PDI

./: Cargo.toml  README.md
src/: main.rs  processos.rs
ui/: app.slint
