[package]
name = "pdi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Processamento de Imagens
image = "0.25"

# Utilidades
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = "1.17.0"
rfd = "0.17.2"

[build-dependencies]
slint-build = "1.17.0"
